tests/errors/type_persistence.orus
fn main() {
    let x = nil
    x = 1
    x = "oops"
}
